--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ header h1 {
     }
 
     .peek {
-        width: 60px;
-        left: 85%;
+        width: 51px;
+        right: 0%;
     }
 
     
