--- a/style.css
+++ b/style.css
@@ -128,6 +128,26 @@ header h1 {
     font-weight: 500;
 }
 
+
+.train-1{
+    position:fixed;
+    width: 10%;
+    height: auto;
+    z-index:999;
+    top:42vh;
+    left:165vh;
+}
+
+.train-2{
+    position:fixed;
+    width: 12%;
+    height: auto;
+    z-index:999;
+    top:54vh;
+    left:5vh;
+}
+
+
 /* Add media query for smaller screens */
 @media screen and (max-width: 768px) {
     header {
@@ -184,5 +204,18 @@ header h1 {
     .dummy-right {
       flex: 0; /* Left section takes up 1 part of available space */
     }
+
+    .train-1{
+    width:18%;
+    top:32vh;
+    left:41vh;
+    }
+    
+    .train-2{
+    width: 12%;
+    z-index:999;
+    top:54vh;
+    left:5vh;
+}
 
 }
